--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,17 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         slide
-version:      0.01
+version:      0.92
 version_from: Slide.pm
 installdirs:  site
 requires:
     Config::General:               0
+    ExtUtils::Command:             0
     Getopt::Long:                  0
     Pod::POM:                      0
     Pod::Usage:                    0
     Template:                      0
+    Test::Pod:                     0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.21_03
